--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.9.1",
     "less": "^4.2.1",
+    "mockjs": "^1.1.0",
+    "pinia": "^2.3.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "axios": "^1.7.9",
     "vite": "^6.0.5"
   }
 }
