--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "axios": "^1.7.9",
+    "echarts": "^5.6.0",
     "vite": "^6.0.5"
   }
 }
